package lk.ac.icbt.sunrisedental.model;

public enum AppointmentStatus { ACTIVE, CANCELLED }
